# web-scraper

./: History_of_Mexico.htm  README.md  pyproject.toml
tests/: test_web_scraper.py
web_scraper/: scraper.py
